# PowerAtlas

./: .gitignore  ARCHITECTURE.md  Makefile  PLAN.md  README.md  docker-compose.yml  netlify.toml  package.json  pnpm-lock.yaml
.claude/: launch.json
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
apps/api/scripts/: ingest.py  migrate.py  seed.py
apps/api/src/: main.py
apps/api/src/api/v1/routers/: monitoring.py  power_data.py
apps/api/src/core/: config.py
apps/api/src/data/: loader.py  repository.py
apps/api/src/data/mock/: brazil-national.json  state-am.json  state-ap.json  state-ce.json  state-df.json  state-go.json  state-ma.json  state-mg.json  state-pi.json  state-pr.json  state-rj.json  state-ro.json  state-rr.json  state-se.json  state-to.json
apps/api/src/db/: pool.py
apps/api/src/ingest/: __init__.py  feeds.py  service.py
apps/api/src/models/: __init__.py  monitoring.py  power_entity.py
apps/api/src/worker/: __init__.py  celery_app.py  tasks.py
apps/api/tests/: conftest.py  test_db_parity.py  test_health.py  test_ingest.py  test_ingest_db.py  test_monitoring.py  test_power_data_contract.py  test_worker.py
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/public/geo/: brazil-national.geojson  brazil-states.geojson  world-countries.geojson
apps/web/scripts/: build-demografia.mjs  build-fiscal.mjs  fetch-geo.mjs  fetch-indicators.mjs  uf-codes.mjs
apps/web/src/: App.vue  env.d.ts  main.ts
apps/web/src/composables/: useAnimatedCounter.spec.ts  useAnimatedCounter.ts  useGsapReveal.ts  useReducedMotion.spec.ts  useReducedMotion.ts
apps/web/test/: setup.ts
db/: Dockerfile
db/migrations/: 0001_init.sql  0002_pipeline.sql  README.md
docs/: data-sources.md
infra/: README.md
(+127 files in other folders)
