[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poweratlas-api"
version = "0.1.0"
description = "PowerAtlas read API: serves the power-entity contract over HTTP (F3)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Arthur Viegas" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.4.0",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.data" = ["mock/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Default run excludes DB-backed tests; opt in with `-m integration` after
# `docker compose up postgres` + migrate + seed.
addopts = "-ra --strict-markers --strict-config -m 'not integration'"
markers = [
    "integration: requires a running Postgres (docker compose up postgres)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
# B008 (function-call-in-default-arg) fires on FastAPI routes that use
# Depends()/Query(): that is the framework idiom, not a bug.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true
